--- a/package.json
+++ b/package.json
@@ -1,12 +1,12 @@
 {
-  "name": "skew-twitter-bot",
+  "name": "tracer-sdk-example",
   "version": "1.0.0",
   "description": "",
   "main": "index.js",
   "scripts": {
     "test": "echo \"Error: no test specified\" && exit 1"
   },
-  "author": "",
+  "author": "raymogg",
   "license": "ISC",
   "dependencies": {
     "@tracer-protocol/pools-js": "^0.0.18",
